# posixfio

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Config.cmake.in  LICENSE.md  README.md  build-mingw.sh  build.sh
archlinux/: PKGBUILD
include/: posixfio.hpp  posixfio_tl.hpp
include/unix/: posixfio.hpp  posixfio_tl.hpp
include/win32/: posixfio.hpp  posixfio_compat_constants.hpp  posixfio_tl.hpp
posixfio/: CMakeLists.txt  posixfio.cpp  posixfio_tl.cpp
posixfio/unix/: CMakeLists.txt  posixfio.cpp
posixfio/win32/: CMakeLists.txt  posixfio.cpp
test/: CMakeLists.txt  posixfio-mmap-test.cpp  posixfio-test.cpp  posixfio-tl-test.cpp  test_tools.cpp  test_tools.hpp
